part1/Exercise1.12/todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo-webserver
          image: swikrititripathi/todo-webserver:v0.3
          ports:
            - containerPort: 8080
        - name: todo-webclient
          image: swikrititripathi/todo-webclient:v0.3
          ports:
            - containerPort: 3000
